Update homepage, project`s page, add footer

--- a/about.html
+++ b/about.html
@@ -23,37 +23,38 @@
     <script src="https://kit.fontawesome.com/8a73f88558.js" crossorigin="anonymous"></script>
   </head>
 
-  <body><nav class="navbar navbar-expand-lg navbar-light fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" target="_blank" href="#">Vilena Martirosova</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link "  target="_blank" aria-current="page" href="/index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="/about.html">About me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" target="_blank" href="/contact.html">Contacts</a>
-          </li>
-        </ul>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" target="_blank" href="/index.html">Vilena Martirosova</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link " target="_blank" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="/contact.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
     <div class="header">
       About Me
     </div>
     <div class="description-me">
-      <div class="container mb-5">
-        <div class="row">
+      <div class="container mb-1">
+        <div class="row" id="row-about-me-page">
           <div class="col-md-5">
             <div class="project-img-bg shadow" id="hero">
               <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid" id="hero-img"
@@ -61,7 +62,7 @@
             </div>
           </div>
           <div class="col-md-7 text-center">
-            <h4 class="mb-4">Allow me to introduce myself</h4>
+            <h4 class="mb-2">Allow me to introduce myself</h4>
             <p class="p-1">
               I am an aspiring Front-end developer looking to grow in the world of computer
               programming. Until June 2022, I didn't
@@ -113,6 +114,16 @@
 
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mt-2" id="contacts"> <h5 id="footer" class="m-4">Let's get in touch!</h5>
+          <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
+              class="fa-regular fa-envelope m-4"></i></a>
+
+          <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
+            class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
+          <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
+            class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
+          </footer>
     </div>
   </body>
 
