--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" target="_blank" href="#">Vilena Martirosova</a>
+                <a class="navbar-brand" target="_blank" href="/index.html">Vilena Martirosova</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
         <div class="header">
             Contact
         </div>
-        <div class="container mb-3">
+        <div class="container mb-5">
             <h4 class="text-center" id="text-header">Feel free to contact me and I will get back as soon as possible!
             </h4>
             <div class="row text-center" id="contacts">
@@ -66,11 +66,13 @@
                 <div class="mb-4">GitHub<br> <a href="https://github.com/VilenaUKR" target="_blank"
                         title="GitHub Vilena Martirosova" class="gitHub-link"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <div class="mb-4">Facebook <br> <a href="https://www.facebook.com/vilena.martirosova" target="_blank"
-                        title="Facebook Vilena Martirosova" class="facebook-link"><i
+                <div class="mb-4" id="facebook-link">Facebook <br> <a href="https://www.facebook.com/vilena.martirosova"
+                        target="_blank" title="Facebook Vilena Martirosova" class="facebook-link"><i
                             class="fa-brands fa-square-facebook"></i></a></div>
-
             </div>
+            <footer>
+                <h5 id="footer" class="text-center">Let's get in touch!</h5>
+            </footer>
         </div>
     </body>
 
