--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" target="_blank" href="#">Vilena Martirosova</a>
+        <a class="navbar-brand" target="_blank" href="/index.html">Vilena Martirosova</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,86 +53,133 @@
       <h2>
         Hello, I'm
       </h2>
-       <h1> Vilena Martirosova</h1>
-     
+      <h1> Vilena Martirosova</h1>
       <h3>
         Front-end developer from Ukraine, based in Scotland
       </h3>
       <a href="/about.html" target="_blank" class="primary-link" title="More information about Vilena Martirosova"
         id="about-hero-link">Know more</a>
     </div>
-    <div class="projects mb-5">
-      <div class="header">
-        My projects
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="project-img-bg shadow">
-              <img src="/src/images/Chihuahua.png" id="Chihuahua-img" title="Chihuahua img" alt="Chihuahua img"
-                class="img-fluid rounded" />
-            </div>
+    <div class="container mb-2 mt-5">
+      <h4 class="text-center mt-5" id="text-header-homepage">Take a look at what I've been working on!</h4>
+      <div class="row">
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg2 shadow">
+            <img src="/src/images/weather_app_img.png" class="img-fluid shadow" id="project-img"
+              alt="Weather app img" />
           </div>
-          <div class="col-md-5 border shadow p-3" id="project-description">
-            <h4 class="mb-3 mt-2">Chihuahua landing page</h4>
-            <p>
-              I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I
-              used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about
-              Chihuahuas. The page utilizes JavaScript functions to create user interaction.
-            </p>
-            <div class="mb-3 mt-5"><div class="btn-shadow">
-              <a href="https://chihuahua-dog.netlify.app/" target="_blank" class="primary-link"
-                title="Chihuahua landing page">Explore page</a></div>
+          <div class="btn-shadow">
+            <a href="/projects.html#weather-img" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link">Weather app</p>
+            </a>
+          </div>
+          <div class="icons">
+            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            </div>
+            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            </div>
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+                width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
+            </div>
+            <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
+                width="30" /></a><br>JavaScript</div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+                width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg shadow">
+            <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
+              alt="Portfolio example img" />
+          </div>
+          <div class="btn-shadow"><a href="/projects.html#portfolio-img" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
+            </a></div>
+          <div class="icons">
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+                width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
+            </div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+                width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
+                width="30" /><br>Responsive <br>Design</div>
+          </div>
+        </div>
+        <div class="col-md-5 mt-3">
+          <div class="project-img-bg shadow">
+            <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
+          </div>
+          <div class="btn-shadow"><a href="/projects.html#Chihuahua-img" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link">Landing page</p>
+            </a></div>
+          <div class="icons">
+            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            </div>
+            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
+                width="30" /><br>Editor
+            </div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 mt-3">
+          <div class="project-img-bg2 shadow">
+            <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" />
+          </div>
+          <div class="btn-shadow"><a href="" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link">In process now...</p>
+            </a></div>
+          <div class="icons">
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+                width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
+            </div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+                width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
+                width="30" /><br>React
+            </div>
+          </div>
+        </div>
+        <footer>
+          <div class="d-flex justify-content-center mt-5" id="contacts">
+            <h5 id="footer" class="m-4">Let's get in touch!</h5>
+            <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
+                class="fa-regular fa-envelope m-4"></i></a>
 
-          <div class="col-md-6">
-            <div class="project-img-bg shadow">
-              <img src="/src/images/weather_app_img.png" id="weather-img" title="weather app" alt="weather app"
-                class="img-fluid rounded" />
-            </div>
-          </div>
-          <div class="col-md-5 border shadow p-3" id="project-description">
-            <h4 class="mb-3 mt-2">Weather app</h4>
-            <p>
-              Before you go anywhere, it's always important to check the weather. <br>
-              I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop.
-              Building upon
-              my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow,
-              hosting, and
-              advanced JavaScript. I combined all of these skills to create a fully-functioning weather app.
-            </p>
-            <div class="mb-3 mt-5">
-              <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link" title="weather app">Launch
-                app</a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="project-img-bg shadow">
-              <img src="/src/images/portfolio-example-img.png" id="portfolio-img" title="portfolio app"
-                alt="portfolio app" class="img-fluid rounded" />
-            </div>
-          </div>
-          <div class="col-md-5 border shadow p-3" id="project-description">
-            <h4 class="mb-3 mt-2">Portfolio example project</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
-              qui animi cupiditate obcaecati ad? Voluptatem officia commodi, rem
-              asperiores inventore impedit non omnis similique perspiciatis
-              explicabo praesentium sed. Nemo, molestiae!
-            </p>
-            <div class="mb-3 mt-5">
-              <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
-                title="portfolio app">Explore project</a>
-            </div>
-          </div>
-        </div>
+            <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
+              class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
+            <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
+              class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
+        </footer>
       </div>
-    </div>
   </body>
 
 </html>
