--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 width="30" /><br>Responsive <br>Design</div>
           </div>
         </div>
-        <div class="col-md-5 mt-3">
+        <div class="col-md-5 mb-5 mt-3">
           <div class="project-img-bg shadow">
             <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
           </div>
