--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" target="_blank" href="/contact.html">Contacts</a>
+              <a class="nav-link" target="_blank" href="/contact.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -64,7 +64,7 @@
       <h4 class="text-center mt-5" id="text-header-homepage">Take a look at what I've been working on!</h4>
       <div class="row">
         <div class="col-md-5 mt-1 mb-5">
-          <div class="project-img-bg2 shadow">
+          <div class="project-img-bg shadow">
             <img src="/src/images/weather_app_img.png" class="img-fluid shadow" id="project-img"
               alt="Weather app img" />
           </div>
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="col-md-5 mt-3">
-          <div class="project-img-bg2 shadow">
+          <div class="project-img-bg shadow">
             <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" />
           </div>
           <div class="btn-shadow"><a href="" target="_blank" id="btn-follow-projects">
