--- a/contact.html
+++ b/contact.html
@@ -35,16 +35,18 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" target="_blank" href="/index.html">Home</a>
+                            <a class="nav-link" title="Home page" aria-current="page" target="_blank"
+                                href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="/about.html">About me</a>
+                            <a class="nav-link" title="About Vilena Martirosova page" target="_blank"
+                                href="/about.html">About me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
+                            <a class="nav-link" title="Projects page" target="_blank" href="/projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/contact.html">Contacts</a>
+                            <a class="nav-link active" title="Contacts page" href="/contact.html">Contacts</a>
                         </li>
                     </ul>
                 </div>
