--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" title="Home page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="/about.html">About me</a>
+              <a class="nav-link" title="About Vilena Martirosova page" target="_blank" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
+              <a class="nav-link" title="Projects page"  target="_blank" href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="/contact.html">Contacts</a>
+              <a class="nav-link" title="Contacts page" target="_blank" href="/contact.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -74,21 +74,21 @@
             </a>
           </div>
           <div class="icons">
-            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            <div><img src="/src/images/HTML.png" class="img-fluid"  title="HTML icon" id="HTML-img" alt="HTML img" width="30" /><br>HTML
             </div>
-            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img" width="30" /><br>CSS
             </div>
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img" alt="Bootstrap img"
                 width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
                 width="30" /><br>GitHub
             </div>
-            <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
+            <div><img src="/src/images/JavaScript.png" class="img-fluid" title="JavaScript icon" id="JavaScript-img" alt="JavaScript img"
                 width="30" /></a><br>JavaScript</div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
                 width="30" /><br>Flexbox
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
                 width="30" /><br>Hosting
             </div>
           </div>
@@ -102,20 +102,20 @@
               <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
             </a></div>
           <div class="icons">
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img" alt="Bootstrap img"
                 width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
                 width="30" /><br>GitHub
             </div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
                 width="30" /><br>Flexbox
             </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img" width="30" /><br>SEO
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
                 width="30" /><br>Hosting
             </div>
-            <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
+            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive icon" id="Responsive-img" alt="Responsive img"
                 width="30" /><br>Responsive <br>Design</div>
           </div>
         </div>
@@ -127,17 +127,17 @@
               <p class="secondary-link">Landing page</p>
             </a></div>
           <div class="icons">
-            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            <div><img src="/src/images/HTML.png" class="img-fluid" title="HTML icon" id="HTML-img" alt="HTML img" width="30" /><br>HTML
             </div>
-            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img" width="30" /><br>CSS
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
                 width="30" /><br>Hosting
             </div>
-            <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
+            <div><img src="/src/images/Editor.png" class="img-fluid" title="Editor icon" id="Editor-img" alt="Editor img"
                 width="30" /><br>Editor
             </div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
                 width="30" /><br>GitHub
             </div>
           </div>
@@ -150,20 +150,20 @@
               <p class="secondary-link">In process now...</p>
             </a></div>
           <div class="icons">
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img" alt="Bootstrap img"
                 width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
                 width="30" /><br>GitHub
             </div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
                 width="30" /><br>Flexbox
             </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img" width="30" /><br>SEO
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
                 width="30" /><br>Hosting
             </div>
-            <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
+            <div><img src="/src/images/React.png" class="img-fluid" title="React icon" id="React-img" alt="React img"
                 width="30" /><br>React
             </div>
           </div>
