--- a/projects.html
+++ b/projects.html
@@ -34,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link " target="_blank" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" title="Home page" target="_blank" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="/about.html">About me</a>
+              <a class="nav-link" title="About Vilena Martirosova page" target="_blank" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/projects.html">Projects</a>
+              <a class="nav-link active" title="Projects page"  href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="/contact.html">Contacts</a>
+              <a class="nav-link" title="Contacts page"  target="_blank" href="/contact.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -86,7 +86,7 @@
               Before you go anywhere, it's always important to check the weather. <i
                 class="fa-solid fa-temperature-high"></i><br>
               I built a Vanilla JavaScript weather app in SheCodes Plus JavaScript coding workshop.
-              Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life
+              Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API's, real-life
               development
               workflow and
               hosting. I combined these skills to create the weather app.
