--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
               <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="50" /><br>CSS
               </div>
               <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
-                  width="50" /></a><br>JavaScript</div>
+                  width="50" /><br>JavaScript</div>
               <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
                   width="50" /><br>React</div>
               <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
@@ -115,7 +115,8 @@
         </div>
       </div>
       <footer>
-        <div class="d-flex justify-content-center mt-2" id="contacts"> <h5 id="footer" class="m-4">Let's get in touch!</h5>
+        <div class="d-flex justify-content-center mt-2" id="contacts">
+          <h5 id="footer" class="m-4">Let's get in touch!</h5>
           <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
               class="fa-regular fa-envelope m-4"></i></a>
 
@@ -123,7 +124,7 @@
             class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
           <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
             class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
-          </footer>
+      </footer>
     </div>
   </body>
 
