--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                             class="fa-brands fa-square-facebook"></i></a></div>
             </div>
             <footer>
-                <h5 id="footer" class="text-center">Let's get in touch!</h5>
+                <h5 id="footer-contact-page" class="footer-contact-page">This project was coded by Vilena Martirosova and it is<a href="https://github.com/VilenaUKR/Portfolio" target="_blank" title="GitHub Vilena Martirosova" class="footer-contact-page-link" id="gitHub-link"> open-sourced</a></h5>
             </footer>
         </div>
     </body>
