--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="keywords" content="skills, javascript developer, react developer, front-end developer" />
-        <meta name="description" content="Contact" />
+        <meta name="keywords" content="Email Vilena, facebook profile, GitHub profile, LinkedIn profail" />
+        <meta name="description" content="Contact Vilena" />
         <title>Contact</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
             crossorigin="anonymous" />
-        <link rel="canonical" href="#" />
+        <link rel="canonical" href="https://vilena-martirosova.netlify.app/" />
         <link rel="stylesheet" href="/src/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
