--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="skills, javascript developer, react developer, front-end developer" />
-    <meta name="description" content="About Vilena Martirosova front-end developer, her projects and contacts" />
+    <meta name="keywords" content="projects, javascript, react , front-end" />
+    <meta name="description" content="Projects Vilena Martirosova" />
     <title>Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
-    <link rel="canonical" href="#" />
+    <link rel="canonical" href="https://vilena-martirosova.netlify.app/" />
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,10 +40,10 @@
               <a class="nav-link" title="About Vilena Martirosova page" target="_blank" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" title="Projects page"  href="/projects.html">Projects</a>
+              <a class="nav-link active" title="Projects page" href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Contacts page"  target="_blank" href="/contact.html">Contacts</a>
+              <a class="nav-link" title="Contacts page" target="_blank" href="/contact.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -71,67 +71,68 @@
             <div class="mb-3 mt-5">
               <a href="https://chihuahua-dog.netlify.app/" target="_blank" class="primary-link"
                 title="Chihuahua landing page">Explore page</a>
-                  </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="project-img-bg shadow">
-              <img src="/src/images/weather_app_img.png" id="weather-img" title="weather app" alt="weather app"
-                class="img-fluid rounded" />
             </div>
           </div>
-          <div class="col-md-5 border shadow p-3" id="project-description">
-            <h4 class="mb-3 mt-2">Weather app</h4>
-            <p>
-              Before you go anywhere, it's always important to check the weather. <i
-                class="fa-solid fa-temperature-high"></i><br>
-              I built a Vanilla JavaScript weather app in SheCodes Plus JavaScript coding workshop.
-              Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API's, real-life
-              development
-              workflow and
-              hosting. I combined these skills to create the weather app.
-            </p>
-            <div class="mb-3 mt-5">
-              <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link" title="weather app">Launch
-                app</a>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="project-img-bg shadow">
+                <img src="/src/images/weather_app_img.png" id="weather-img" title="weather app" alt="weather app"
+                  class="img-fluid rounded" />
+              </div>
+            </div>
+            <div class="col-md-5 border shadow p-3" id="project-description">
+              <h4 class="mb-3 mt-2">Weather app</h4>
+              <p>
+                Before you go anywhere, it's always important to check the weather. <i
+                  class="fa-solid fa-temperature-high"></i><br>
+                I built a Vanilla JavaScript weather app in SheCodes Plus JavaScript coding workshop.
+                Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API's, real-life
+                development
+                workflow and
+                hosting. I combined these skills to create the weather app.
+              </p>
+              <div class="mb-3 mt-5">
+                <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link"
+                  title="weather app">Launch
+                  app</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="project-img-bg shadow">
-              <img src="/src/images/portfolio-example-img.png" id="portfolio-img" title="portfolio app"
-                alt="portfolio app" class="img-fluid rounded" />
+          <div class="row">
+            <div class="col-md-6">
+              <div class="project-img-bg shadow">
+                <img src="/src/images/portfolio-example-img.png" id="portfolio-img" title="portfolio app"
+                  alt="portfolio app" class="img-fluid rounded" />
+              </div>
             </div>
-          </div>
-          <div class="col-md-5 border shadow p-3" id="project-description">
-            <h4 class="mb-3 mt-2">Portfolio example project</h4>
-            <p>
-              I built a Portfolio example maket in SheCodes Responsive coding workshop.
-              I've learnt about Multiple HTML Pages, Advanced HTML Links, CSS Variables, Flexbox, Utility CSS Classes,
-              Responsive Design, CSS Media Queries, SEO, Wireframe.
+            <div class="col-md-5 border shadow p-3" id="project-description">
+              <h4 class="mb-3 mt-2">Portfolio example project</h4>
+              <p>
+                I built a Portfolio example maket in SheCodes Responsive coding workshop.
+                I've learnt about Multiple HTML Pages, Advanced HTML Links, CSS Variables, Flexbox, Utility CSS Classes,
+                Responsive Design, CSS Media Queries, SEO, Wireframe.
 
-            </p>
-            <div class="mb-3 mt-5">
-              <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
-                title="portfolio app">Explore project</a>
+              </p>
+              <div class="mb-3 mt-5">
+                <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
+                  title="portfolio app">Explore project</a>
+              </div>
             </div>
           </div>
         </div>
+
+        <footer>
+          <div class="d-flex justify-content-center mt-2" id="contacts">
+            <h5 id="footer" class="m-4">Let's get in touch!</h5>
+            <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
+                class="fa-regular fa-envelope m-4"></i></a>
+
+            <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
+              class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
+            <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
+              class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
+        </footer>
       </div>
-
-      <footer>
-        <div class="d-flex justify-content-center mt-2" id="contacts">
-          <h5 id="footer" class="m-4">Let's get in touch!</h5>
-          <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
-              class="fa-regular fa-envelope m-4"></i></a>
-
-          <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
-            class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
-          <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
-            class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
-      </footer>
-    </div>
   </body>
 
 </html>
