Changed header of about me paragraf

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="col-md-7 text-center">
-            <h4 class="mb-2">Allow me to introduce myself</h4>
+            <h4 class="mb-2">Introducing of myself</h4>
             <p class="p-1">
               I am an aspiring Front-end developer looking to grow in the world of computer
               programming. Until June 2022, I didn't
