Updated `about me` page

--- a/about.html
+++ b/about.html
@@ -49,73 +49,107 @@
         </div>
       </div>
     </nav>
-    <div class="header">
-      About Me
-    </div>
-    <div class="description-me">
-      <div class="container mb-1">
-        <div class="row" id="row-about-me-page">
-          <div class="col-md-5">
-            <div class="project-img-bg shadow" id="hero">
-              <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid" id="hero-img"
-                alt="Vilena Martirosova img" />
+    <div class="container-fluid mb-2">
+      <div class="description-me">
+        <div class="header">
+          About Me
+        </div>
+        <div class="container mb-1">
+          <div class="row " id="row-about-me-page">
+            <div class="col-xl-4 col-lg-5 col-md-7 col-sm-8 col-xs-5 mb-3">
+              <div class="project-img-bg shadow" id="hero">
+                <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid" id="hero-img"
+                  alt="Vilena Martirosova img" />
+              </div>
+            </div>
+            <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12 col-xs-5 text-center">
+              <h4 class="mb-2">Introducing of myself</h4>
+              <p class="p-1 ">
+                I am an aspiring Front-end developer looking to grow in the world of computer
+                programming. Until June 2022, I didn't
+                have any experience in this, but I had a huge desire to learn a beautiful and complex
+                new language. Previously, I worked in the field of finance and economics.
+                I'm very glad that I started studying coding because it turned out to be incredibly
+                interesting and now I want to move in this
+                direction in the future.
+                Check out some of my work in the <a href="/projects.html" target="_blank" class="projects-link"
+                  title="Projects section">Projects</a>. <br> I'm open to Job opportunities where I can contribute,
+                learn
+                and grow. If you have a good
+                opportunity that matches my
+                skills and experience than feel free to <a href="/contact.html" target="_blank" class="contact-link"
+                  title="contact me">contact me</a>.
+              </p>
             </div>
           </div>
-          <div class="col-md-7 text-center">
-            <h4 class="mb-2">Introducing of myself</h4>
-            <p class="p-1">
-              I am an aspiring Front-end developer looking to grow in the world of computer
-              programming. Until June 2022, I didn't
-              have any experience in this, but I had a huge desire to learn a beautiful and complex
-              new language. Previously, I worked in the field of finance and economics.
-              I'm very glad that I started studying coding because it turned out to be incredibly
-              interesting and now I want to move in this
-              direction in the future.
-              Check out some of my work in the <a href="/projects.html" target="_blank" class="projects-link"
-                title="Projects section">Projects</a>. <br> I'm open to Job opportunities where I can contribute, learn
-              and grow. If you have a good
-              opportunity that matches my
-              skills and experience than feel free to <a href="/contact.html" target="_blank" class="contact-link"
-                title="contact me">contact me</a>.
-            </p>
-
-            <div class="icons">
-              <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="50" /><br>HTML
-              </div>
-              <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="50" /><br>CSS
-              </div>
-              <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
-                  width="50" /><br>JavaScript</div>
-              <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
-                  width="50" /><br>React</div>
-              <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                  width="50" /><br>Bootstrap</div>
-              <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                  width="50" /><br>GitHub</div>
-            </div>
-            <div class="icons">
-              <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
-                  width="50" /><br>Editor</div>
-
-              <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                  width="50" /><br>Flexbox</div>
-
-              <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="50" /><br>SEO
-              </div>
-              <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                  width="50" /><br>Hosting</div>
-              <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
-                  width="50" /><br>Responsive <br>Design</div>
-              <div><img src="/src/images/API.png" class="img-fluid" id="APIL-img" alt="API img" width="50" /> <br>API
-              </div>
-            </div>
+        </div>
+        <h3 class="mb-2 mt-5 text-center">My skills</h3>
+        <div class="row text-center" id="my-skills-row">
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img"
+              alt="HTML img" width="50" /><br>HTML
+          </div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img"
+              alt="CSS img" width="50" /><br>CSS
+          </div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/JavaScript.png" class="img-fluid"
+              id="JavaScript-img" alt="JavaScript img" width="50" /><br>JavaScript</div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/React.png" class="img-fluid" id="React-img"
+              alt="React img" width="50" /><br>React
+          </div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Bootstrap.png" class="img-fluid"
+              id="Bootstrap-img" alt="Bootstrap img" width="50" /><br>Bootstrap</div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/GitHub.png" class="img-fluid"
+              id="GitHub-img" alt="GitHub img" width="50" /><br>GitHub
           </div>
 
-
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img"
+              alt="Editor img" width="50" /><br>Editor
+          </div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img"
+              alt="Flexbox img" width="50" /><br>Flexbox
+          </div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img"
+              alt="SEO img" width="50" /><br>SEO
+          </div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img"
+              alt="Hosting img" width="50" /><br>Hosting
+          </div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Responsive.png" class="img-fluid"
+              id="Responsive-img" alt="Responsive img" width="50" /><br>Responsive <br>Design</div>
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/API.png" class="img-fluid" id="APIL-img"
+              alt="API img" width="50" /> <br>API
+          </div>
+        </div>
+        <div class="row ml-3 mr-3">
+          <h3 class="mb-5 text-center">My certificates</h3>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="mb-3 project-img-bg shadow">
+              <img src="/src/images/basic-certificate.png" id="basic-certificate-img" title="Basic certificate img"
+                alt="Basic certificate img" class="img-fluid rounded" />
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="mb-3 project-img-bg shadow">
+              <img src="/src/images/front-end-certificate.png" id="front-end-certificate-img"
+                title="Front-end certificate img" alt="Front-end certificate img" class="img-fluid rounded" />
+            </div>
+          </div>
+          <div class="mb-3 col-lg-3 col-md-6 col-sm-6">
+            <div class="project-img-bg shadow">
+              <img src="/src/images/responsive-sertificate.png" id="responsive-sertificate-img"
+                title="Responsive sertificate img" alt="Responsive sertificate img" class="img-fluid rounded" />
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="project-img-bg shadow">
+              <img src="/src/images/basic-certificate.png" id="react-sertificate-img" title="React sertificate img"
+                alt="React sertificate img" class="img-fluid rounded" />
+            </div>
+          </div>
         </div>
       </div>
       <footer>
-        <div class="d-flex justify-content-center mt-2" id="contacts">
+        <div class="d-flex justify-content-center" id="contacts">
           <h5 id="footer" class="m-4">Let's get in touch!</h5>
           <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
               class="fa-regular fa-envelope m-4"></i></a>
