--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
               </div>
             </div>
             <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12 col-xs-5 text-center">
-              <h4 class="mb-2">Introducing of myself</h4>
+              <h4 class="mb-2">Self-introduction</h4>
               <p class="p-1 ">
                 I am an aspiring Front-end developer looking to grow in the world of computer
                 programming. Until June 2022, I didn't
@@ -102,17 +102,17 @@
               id="GitHub-img" alt="GitHub img" width="50" /><br>GitHub
           </div>
 
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img"
-              alt="Editor img" width="50" /><br>Editor
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Editor.png" class="img-fluid"
+              id="Editor-img" alt="Editor img" width="50" /><br>Editor
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img"
-              alt="Flexbox img" width="50" /><br>Flexbox
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Flexbox.png" class="img-fluid"
+              id="Flexbox-img" alt="Flexbox img" width="50" /><br>Flexbox
           </div>
           <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img"
               alt="SEO img" width="50" /><br>SEO
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img"
-              alt="Hosting img" width="50" /><br>Hosting
+          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Hosting.png" class="img-fluid"
+              id="Hosting-img" alt="Hosting img" width="50" /><br>Hosting
           </div>
           <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Responsive.png" class="img-fluid"
               id="Responsive-img" alt="Responsive img" width="50" /><br>Responsive <br>Design</div>
